k8s/stockapi-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: stockapi-deployment
  namespace: stockapi
spec:
  replicas: 2
  selector:
    matchLabels:
      app: stockapi
  template:
    metadata:
      labels:
        app: stockapi
    spec:
      containers:
      - name: stockapi
        image: roblesoft/socket:0.0.1
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
        readinessProbe:
          httpGet:
            path: /ping
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 20
        livenessProbe:
          tcpSocket:
            port: 80
          initialDelaySeconds: 15
          periodSeconds: 20
        ports:
        - containerPort: 3005
