k8s/stockapi-service.yml
apiVersion: v1
kind: Service
metadata:
  name: stockapi-service
  namespace: stockapi
spec:
  selector:
    app: stockapi
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3005
  type: LoadBalancer
