k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stockapi-ingress
  labels:
    name: stockapi-ingress
spec:
  rules:
  - host: stockapi.tech
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: stockapi-service
            port: 
              number: 3005
